# appwrite-lab

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ensure_patched_templates.yaml  publish.yaml  run_tests.yaml
appwrite_lab/: __init__.py  _orchestrator.py  _state.py  cli.py  config.py  labs.py  models.py  utils.py
appwrite_lab/automations/: __init__.py  automations.py  common.py  functions.py  models.py  utils.py
appwrite_lab/automations/functions/: create_project.py  create_user_and_api_key.py  sync_project.py
appwrite_lab/automations/scripts/: create_api_key.py  create_project.py  create_user_and_api_key.py  sync_project.py
appwrite_lab/cli/: entry.py  list_menu.py  new_menu.py  stop_menu.py  sync_menu.py
appwrite_lab/cli/new/: menu.py
appwrite_lab/playwright/: automations.py  common.py  functions.py  models.py  utils.py
appwrite_lab/playwright/functions/: create_project.py  create_user_and_api_key.py
appwrite_lab/templates/: docker_compose_1_7_4.yml
appwrite_lab/templates/environment/: dotenv
appwrite_lab/templates/extras/mailpit/: docker_compose.yml
appwrite_lab/templates/extras/twilio-shim/: docker_compose.yml
appwrite_lab/templates/playwright/: docker_compose.yml
appwrite_lab/test_suite/: __init__.py  fixtures.py
appwrite_lab/tools/: sms.py
docker/: Dockerfile.appwrite_cli  Dockerfile.appwrite_playwright
scripts/: selinuxify_template_patch.py
tests/: conftest.py  test_labs.py  test_orchestrator.py  test_tools.py
tests/data/: appwrite.json
twilio-shim/: Dockerfile  entrypoint.sh  main.py  requirements.txt
