[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appwrite-lab"
version = "0.0.4"
description = "Zero-click Appwrite test environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["playwright", "typer>=0.16.0", "python-dotenv>=1.1.0"]
license = "MIT"

[tool.setuptools]
packages = ["appwrite_lab"]
package-data = { "appwrite_lab" = ["templates/**"] }

[project.scripts]
appwrite-lab = "appwrite_lab.cli.entry:app"
awlab = "appwrite_lab.cli.entry:app"