[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appwrite-lab"
version = "0.1.2"
description = "Zero-click Appwrite test environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["playwright", "typer>=0.16.0", "python-dotenv>=1.1.0", "pytest>=8.4.1"]
license = "MIT"

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = true

[tool.setuptools.package-data]
appwrite_lab = ["templates/**/*"]

[project.scripts]
appwrite-lab = "appwrite_lab.cli.entry:app"
awlab = "appwrite_lab.cli.entry:app"

[tool.pytest.ini_options]
markers = [
    "e2e: mark test as e2e",
]
